Data de criação: 10/10/2021
Data de atualização: 15/10/2021
Versão: 0.05
Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64

============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
15/10/2021 - Robson Vaamonde - Melhorias no script: 07-lamp.sh, atualização da versão do Debconf do Mysql Server para
a versão 8.0, acréscimo da dependência do PhpMyAdmin php-json e retirada do: php-gettext (no Ubuntu 20.04.x) o suporte
ao php-getttext foi retirado dos repositórios oficiais, remoção da versão do pecl install mcrypt para facilitar o
processo de instalação da dependência de criptografia do PHP, atualização da versão do PHP 7.4, atualização dos arquivos
de configuração: apache2.conf, mcrypt.ini, mysqld.cnf, php.ini, phpinfo.php, teste.html.

14/10/2021 - Robson Vaamonde - Adicionado o comando: timedatectl set-timezone no script: 05-ntp.sh e criado a variável
TIMEZONE="America/Sao_Paulo" no arquivo de parâmetros: 00-paramentros.sh. Melhoria na documentação da geração da chave
TSIG no arquivo conf: named.conf.local, desabilitado o recurso do IPv6 no arquivo conf: named.conf.options, criação do
arquivo named referente ao serviço do Bind9 DNS Server, adicionado a opção -4 para suportar somente IPv4, acrescentado
o arquivo named no script: 03-dns.sh, aplicado o Path de Correção da falha: rndc: connect failed: 127.0.0.1#953: 
connection refused no no script: 03-dns.sh comando: chown -v root:bind /etc/bind/rndc.key. Correção da falha do Bind9 
referente a mensagens no Systemctl de: file does not end with newline, adicionado uma linha no final do arquivo da Zona
de Pesquisa direta: pti.intra.hosts (O Bind espera uma nova linha no final de seus arquivos de configuração. Adicione uma 
nova linha no final do arquivo após a entrada que você adicionou manualmente.). Correção da falha do Bind9 referente a 