@@ -6,11 +6,15 @@ YouTube: youtube.com/BoraParaPratica
 Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 Data de criação: 10/10/2021
-Data de atualização: 14/10/2021
-Versão: 0.05
+Data de atualização: 15/10/2021
+Versão: 0.06
 Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 
 ============================================= CORREÇÕES DOS BUGS DOS SCRIPTS =============================================
+0006 - Aplicação de todos os privilegios de acesso remoto ao usuário Root do Mysql, a partir da versão 8.0.x do MySQL o
+procedimento de aplicar as permissões GRANT no Banco de Dados MySQL mudou, sendo necessário criar o usuário root e depois
+aplicar as permissões, correção feita no arquivo 00-parametros.sh.
+
 0005 - Instalação do Ubuntu Server 20.04.x LTS no VirtualBOX, após vários testes na versão 20.04.3 LTS do Ubuntu Server x64
 a falha de lentidão no processo de atualização do sistema utilizando os comandos apt ou apt-get está associado ao Sources 
 List do BR (Brasil), após a alteração no arquivo: /etc/apt/sources.list de: https://br. para https://us. em todas as linhas 
