@@ -7,8 +7,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 10/10/2021
-# Data de atualização: 13/10/2021
-# Versão: 0.04
+# Data de atualização: 15/10/2021
+# Versão: 0.05
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 #
 # Parâmetros (variáveis de ambiente) utilizados nos scripts de instalação dos Serviços de Rede
@@ -111,11 +111,13 @@ SENHAMYSQL="pti@2018"
 AGAIN=$SENHAMYSQL
 #
 # Variáveis de configuração e liberação da conexão remota para o usuário Root do MySQL
-# opões do comando GRANT: grant (permissão), all (todos privilégios), on (em ou na | banco ou 
-# tabela), *.* (todos os bancos/tabelas) to (para), user@'%' (usuário @ localhost), identified 
-# by (identificado por - senha do usuário)
-# opção do comando FLUSH: privileges (recarregar as permissões)
-GRANTALL="GRANT ALL ON *.* TO $USERMYSQL@'%' IDENTIFIED BY '$SENHAMYSQL';"
+# opções do comando CREATE: create (criar), user (criação de usuário), user@'%' (usuário @ localhost), 
+# identified by (identificado por - senha do usuário)
+# opções do comando GRANT: grant (permissão), all (todos privilégios), on (em ou na | banco ou 
+# tabela), *.* (todos os bancos/tabelas) to (para), user@'%' (usuário @ localhost), 
+# opção do comando FLUSH: privileges (recarregar as permissões de privilegios)
+CREATEUSER="CREATE USER '$USERMYSQL'@'%' IDENTIFIED BY '$SENHAMYSQL';"
+GRANTALL="GRANT ALL ON *.* TO '$USERMYSQL'@'%';"
 FLUSH="FLUSH PRIVILEGES;"
 #
 # Variável de configuração do usuário padrão de administração do PhpMyAdmin (Root do MySQL)
